syntax = 'proto3';

option go_package = 'future/internal/summary;summary';

service Summary {
  rpc Push (PushRequest) returns (PushResponse) {}
  rpc Pull (PullRequest) returns (stream PushRequest) {} // I don't like stream here.
}

message PushRequest {
  string name = 1;
  string value = 2;
}

message PushResponse {
  bool success = 1;
}

message PullRequest {
}